--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
   "python-dateutil (>=2.8.2)",
   "pydantic (>=2)",
   "typing-extensions (>=4.7.1)",
-  "lazy-imports (>=1,<2)"
+  "lazy-imports (>=1,<2)",
+  "pyjwt>=2.10.1",
 ]
 
 [project.urls]
